clusters/cluster-002/custom-resources/akrugliak/networkpolicies/allow-egress-internet-custom.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-internet-custom
  namespace: akrugliak
spec:
  podSelector:
    matchLabels:
      allow: internet
  egress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
  policyTypes:
    - Egress
