clusters/cluster-002/custom-resources/akrugliak/networkpolicies/test-allow-8443.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-internet-custom-test
  namespace: akrugliak
spec:
  podSelector:
    matchLabels:
      allow: internet
  egress:
    - ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8443
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8443
  policyTypes:
    - Egress
    - Ingress
